--- a/css/style.css
+++ b/css/style.css
@@ -80,17 +80,29 @@ main > section{
 }
 
 div.column{
-    padding: 2rem;
+    padding: 1rem;
 }
 
 div.column-small{
-    width: 30%;
+    width: 45%;
 }
 
 div.column-big{
-    width: 50%;
+    width:60%;
 }
 
+section.invite h1{
+    font-size: 2.5rem;
+    padding: 1rem;
+}
+
+section.invite p{
+    padding: 0.1rem 0.2rem 0.2rem 1rem;
+}
+
+section.invite img{
+    height: 23rem;
+}
 section.contact{
     padding: 2rem;
     display: flex;
