--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,15 @@
     align-items: center;
 }
 
+.imgMain{
+    height: 23rem;
+}
+
+.mainH1{
+    font-size: 2.5rem;
+    padding: 1rem;
+}
+
 div.container{
     margin: 0 auto;
     max-width: 1200px;
@@ -88,27 +97,39 @@ div.column-small{
 }
 
 div.column-big{
-    width:60%;
+    width:80%;
 }
 
-section.invite h1{
-    font-size: 2.5rem;
-    padding: 1rem;
-}
 
 section.invite p{
     padding: 0.1rem 0.2rem 0.2rem 1rem;
 }
 
-section.invite img{
-    height: 23rem;
+
+section.find{
+    background-color: #f6f6f6;;
 }
+
+
+section.find p{
+    padding: 0.1rem 0.2rem 0.2rem 1rem;
+}
+
+section.fandom p{
+    padding: 0.1rem 0.2rem 0.2rem 1rem;
+}
+
 section.contact{
     padding: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #f6f6f6;
+}
+
+section.contact p{
+    text-align: center;
 }
 
 section.contact .adventure{
@@ -132,3 +153,4 @@ footer{
 footer p{
     width: 15%;
 }
+
